package lotto.game.service

interface Game {
    fun play()
    fun process()
}