package lotto.model.generator

interface LottoNumberListGenerator {
    fun generate(): List<Int>
}