@startuml
'https://plantuml.com/class-diagram


interface Game {
play()
process()
}

interface LottoNumberListGenerator {
generate(): List<Int>
}

enum Rank{
matchCount: Int
money: Int
message: String

FIRST()
SECOND()
THIRD()
FOURTH()
FIFTH()
}

LottoMaker "금액" <|.. "로또를 발행해라" LottoGame : 로또 >
LottoGame --|> Game
OutputView "결과" <|.. "결과를 출력해라" LottoGame : 출력 >
LottoGame "입력해라" ..|> InputView : 금액/당첨/보너스 <
LottoGame "결과를 만들어라" ..|> "로또/당첨/보너스 번호"Lotto : 결과 <
LottoNumberListGenerator <|-- LottoRandomListGenerator
LottoRandomListGenerator  <|.. "로또를 생성해라" LottoMaker : 로또 >

class LottoRandomListGenerator {
generate(): List<Int>
}


class Lotto {
numbers: List<Int>
matchCountList: MutableList<Int>
winningMap: HashMap<Rank, Int>

createMatchCountList(lotteriesMap: HashMap<Int, List<Int>>,bonusNumber: Int,): HashMap<Rank, Int>
updateWinningMap(): HashMap<Rank, Int>
updateTotalReturn(): Int
createTotalReturn(purchase: Int): Double
}

class LottoMaker {
makeLotto(money: Int): HashMap<Int, List<Int>>
}

class LottoGame {
inputView: InputView
outputView: OutputView
lottoMaker: LottoMaker

outputLotto()
outputResult()
}

class InputView {
createMoney(): Int
createWinningNumber(): List<Int>
createBonusNumber(): Int
}

class OutputView {
printLotto(lotto: HashMap<Int, List<Int>>)
printResult(winningList: HashMap<Rank, Int>, returnTotal: Double)
}


@enduml